Se elimina archivos innecesarios y se arregla links

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             <img src="img/Manualu.png" alt=""  width="340" height="340"/>
             <div class="overlay">
               <h3>Manual de usuario colhealth</h3>
-                <a href="./img/Manual_del_usuario.pdf" download 
+                <a href="./img/Manual_de_usuario.pdf" download 
                 style="text-decoration: none;">
                      <p>Descargar Documento</p> 
                 </a>
