Se arreglan imagenes que no cargan

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             </div>
           </div>
           <div class="proyecto">
-            <img src="img/Manualu.png" alt=""  width="340" height="340"/>
+            <img src="img/manualU.PNG" alt=""  width="340" height="340"/>
             <div class="overlay">
               <h3>Manual de usuario colhealth</h3>
                 <a href="./img/Manual_de_usuario.pdf" download 
